--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 langage: java
 sudo: false
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
+jdk: 
+  - oraclejdk8
+  
 script: mvn test -B
