--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ addons:
 jdk: 
   - oraclejdk8
   
-script: mvn test -B
+script: 
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn test -B
