--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,2 @@
-langage: java
-sudo: false
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
-
-jdk: 
-  - oraclejdk8
-  
-script: 
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-  - mvn test -B
+script:
+  echo "Bonjour"
