--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
 			<version>4.3.1.RELEASE</version>
 		</dependency>
 
+	 <dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>servlet-api</artifactId>
+	    <version>2.5</version>
+	    <scope>provided</scope>
+	  </dependency>
+
 
 	</dependencies>
 
